# data-basis

./: .gitattributes  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CLAUDE.md  DEV_NOTES.md  README.md
.claude/: settings.local.json
.claude/commands/: deploy.md  health-check.md  snapshot-cleanup.md  snapshot.md
.github/workflows/: ci-backend.yml  ci-frontend.yml  secret-scan.yml
application/backend/: .dockerignore  .env.example  .gitignore  Dockerfile  pyproject.toml  tasks.md
application/backend/app/: config.py  dependencies.py  main.py
application/backend/app/domain/: exceptions.py
application/backend/app/domain/entities/: customer.py  segment.py  user.py
application/backend/app/domain/value_objects/: pagination.py  role.py  score.py
application/backend/app/infrastructure/clients/: kafka_admin_client.py  ollama_client.py  redis_cache_client.py
application/backend/app/infrastructure/database/: clickhouse.py  models.py  postgres.py  redis.py
application/backend/app/infrastructure/repositories/: clickhouse_analytics_repository.py  postgres_customer_repository.py  postgres_job_repository.py  postgres_product_repository.py  postgres_schema_repository.py  postgres_user_repository.py
application/backend/app/interfaces/clients/: cache_client.py  kafka_client.py  llm_client.py
application/backend/app/interfaces/repositories/: analytics_repository.py  customer_repository.py  job_repository.py  product_repository.py  schema_repository.py  user_repository.py
application/backend/app/pipelines/cleansing/: birthdate.py  name.py  phone.py  prefecture.py
application/backend/app/pipelines/consumers/: pg_consumer.py  s3_consumer.py
application/backend/app/pipelines/deduplication/: batch.py  matcher.py
application/backend/app/pipelines/embeddings/: product_embeddings.py
application/backend/app/pipelines/etl/: pg_to_clickhouse.py
application/backend/app/pipelines/producers/: app_producer.py  base.py  ec_producer.py  inventory_producer.py  pos_producer.py
application/backend/app/presentation/middleware/: auth_middleware.py  logging_middleware.py
application/backend/app/presentation/routers/: auth.py  business.py  ops.py  users.py
application/backend/app/presentation/schemas/: auth.py  business.py  ops.py
application/backend/app/scoring/: inventory_sync.py  runner.py
application/backend/app/shared/: jwt.py  logging.py  metrics.py
application/backend/app/use_cases/auth/: get_me.py  login.py
application/backend/app/use_cases/business/: get_affinity.py  get_customer.py  get_recommendations.py  get_sales_analytics.py  get_segment_summary.py  get_segment_trend.py  get_summary.py  list_customers.py  natural_language_query.py
application/backend/app/use_cases/ops/: get_consumer_groups.py  get_kafka_topics.py  get_pipeline_jobs.py  get_schema_tables.py  get_scoring_batches.py  health_check.py
application/backend/tests/: conftest.py
application/backend/tests/e2e/: conftest.py  test_auth_flow.py  test_business_endpoints.py  test_ops_endpoints.py
application/backend/tests/integration/clients/: test_kafka_admin_client.py  test_ollama_client.py
application/backend/tests/integration/repositories/: test_clickhouse_analytics_repository.py  test_postgres_customer_repository.py  test_postgres_schema_repository.py
application/backend/tests/unit/domain/: test_role.py  test_score.py
application/backend/tests/unit/use_cases/auth/: test_login.py
application/backend/tests/unit/use_cases/business/: test_get_customer.py  test_get_recommendations.py  test_list_customers.py  test_natural_language_query.py
application/backend/tests/unit/use_cases/ops/: test_get_kafka_topics.py  test_get_scoring_batches.py  test_health_check.py
application/frontend/: .dockerignore  .env.example  .gitignore  Dockerfile  jest.config.ts  jest.setup.ts  middleware.ts  package-lock.json  package.json  tasks.md  (+2 more)
infrastructure/: NETWORK.md
plan/: background.md  company.md
usage/: debug.md  deploy.md  index.md  services.md  toolbox.md  versions.md  vm.md
v1.0/: data_schema.md  plan.md
v1.1/: deployment_snapshot.txt  plan.md  tasks.md
v1.1.1/: plan.md  tasks.md
v1.1.2/: plan.md  tasks.md
v1.2/: plan.md  tasks.md
v1.2g/: tasks.md
v1.3/: plan.md
verification/: generate.py  pyproject.toml  verify.py
verification/src/: customers.py  dirty.py  events.py  master_data.py  schema.py
versions/: record.sh  rollback.sh  schema.sql  status.sh  todo.md
(+182 files in other folders)
