[project]
name = "technomart-synth"
version = "0.1.0"
description = "Synthetic dirty data generation for TechnoMart data platform verification"
requires-python = ">=3.12"
dependencies = [
    "faker>=24.0.0",
    "rich>=13.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

# ──────────────────────────────────────────────
# 実行コマンド
#   uv run python generate.py          # デフォルト 500人
#   uv run python generate.py --count 1000
#   uv run python verify.py
#
# Windows では PYTHONUTF8=1 が必要（generate.py / verify.py 内で自動設定済み）
# ──────────────────────────────────────────────
