[project]
name = "technomart-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    # Web フレームワーク
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    # バリデーション・設定（.env 読み込み）
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    # PostgreSQL（非同期）
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    # ClickHouse（HTTP ベース。asyncio.to_thread でラップして使用）
    "clickhouse-connect>=0.8",
    # Kafka Admin
    "kafka-python-ng>=2.2",
    # Redis
    "redis[hiredis]>=5.2",
    # HTTP クライアント（Ollama 呼び出し）
    "httpx>=0.28",
    # JWT
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    # 構造化ログ
    "structlog>=24.4",
    # S3（LocalStack）
    "boto3>=1.35",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.14",
    "pytest-cov>=6.0",
    "httpx>=0.28",
    "mypy>=1.13",
    "sqlalchemy[mypy]>=2.0",
    "ruff>=0.8",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
