[project]
name = "technomart-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    # Web フレームワーク
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    # バリデーション・設定（.env 読み込み）
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    # PostgreSQL（非同期）
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    # ClickHouse（HTTP ベース。asyncio.to_thread でラップして使用）
    "clickhouse-connect>=0.8",
    # Kafka Admin
    "kafka-python-ng>=2.2",
    # Redis
    "redis[hiredis]>=5.2",
    # HTTP クライアント（Ollama 呼び出し）
    "httpx>=0.28",
    # JWT・パスワードハッシュ
    "python-jose[cryptography]>=3.3",
    "bcrypt>=4.0",
    # 構造化ログ
    "structlog>=24.4",
    # S3（LocalStack）
    "boto3>=1.35",
    # Prometheus メトリクス送信（Pushgateway 経由）
    "prometheus-client>=0.21",
    # FastAPI Prometheus インストルメンテーション（/metrics エンドポイント）
    "prometheus-fastapi-instrumentator>=7.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.14",
    "pytest-cov>=6.0",
    "httpx>=0.28",
    "mypy>=1.13",
    "sqlalchemy[mypy]>=2.0",
    "ruff>=0.8",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: marks tests requiring running VM services (Kafka, PostgreSQL, etc.)",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E501"]  # テストの認証ヘッダー等は行長制限を緩和

[tool.mypy]
python_version = "3.12"
strict = true
# FastAPI の動的デコレーター（@router.get 等）は mypy が型推論できないため除外
# untyped-decorator: FastAPI @router.get 等は動的デコレーターのため除外
# misc: pydantic v2 の BaseModel / BaseSettings は stubs なしだと Any になるため除外
disable_error_code = ["untyped-decorator", "misc"]

# パイプライン・ETL・プロデューサー・コンシューマーは script-style コード。
# 型アノテーションは段階的に追加（v1.3 以降で強化予定）
# Note: strict=true のグローバル設定は per-module override の個別フラグで上書き不可（mypy 1.19 の挙動）
#       ignore_errors = true で該当モジュールの型チェックを完全スキップする
[[tool.mypy.overrides]]
module = [
    "app.pipelines.producers.*",
    "app.pipelines.consumers.*",
    "app.pipelines.etl.*",
    "app.pipelines.embeddings.*",
    "app.pipelines.cleansing.*",
    "app.scoring.inventory_sync",
    "app.scoring.runner",
]
ignore_errors = true
